Bug 153874 - FILEOPEN DOCX Image behind shape is shown in front
Summary: FILEOPEN DOCX Image behind shape is shown in front
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2023-02-28 01:05 UTC by Aron Budea
Modified: 2023-03-02 09:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (18.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-02-28 01:05 UTC, Aron Budea
Details
Screenshot in Word (17.75 KB, image/png)
2023-02-28 01:06 UTC, Aron Budea
Details
Screenshot in Writer (67.95 KB, image/png)
2023-02-28 01:07 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2023-02-28 01:05:56 UTC
Created attachment 185624 [details]
Sample DOCX

Open the attached DOCX, created in Word. It has a blue rectangle (shape) in the foreground, and a red rectangle (image) in the background.

In Writer the image is shown in the foreground.

Observed using LO 7.6.0.0.alpha0+ (2da16ff9f018fae68c53a801e5a234dafc2ebcec) / Ubuntu.

This is a regression from the following commit, bibisected to its 7.5 backport using repo linux-64-7.5. Adding CC: to Michael Stahl.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=31084ebb59093be7dfe5ab53a20fdb3bcfde34b6
author		Michael Stahl <michael.stahl@allotropia.de>	2022-12-08 10:54:18 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2022-12-09 16:03:20 +0000

tdf#143311 offapi,oox,writerfilter,xmloff,sw: decorative flag on flys
Comment 1 Aron Budea 2023-02-28 01:06:20 UTC
Created attachment 185625 [details]
Screenshot in Word
Comment 2 Aron Budea 2023-02-28 01:07:33 UTC
Created attachment 185626 [details]
Screenshot in Writer
Comment 3 Commit Notification 2023-02-28 15:44:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/043c349f144b615836091707147e57616a1261e7

tdf#153874 writerfilter: fix anchoring of decorative shapes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2023-02-28 15:44:34 UTC
fixed on master
Comment 5 Commit Notification 2023-03-02 09:15:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e420f47ec10bf6be73972da2c1afbe1c0e02cb9e

tdf#153874 writerfilter: fix anchoring of decorative shapes

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.